# study-rust-example

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
algorithms/: Cargo.toml
algorithms/algorithms-utils/: Cargo.toml
algorithms/algorithms-utils/src/: lib.rs  link_list.rs  tree.rs
algorithms/src/: array_2d_search.rs  array_sort.rs  avl.rs  binary_search_tree_from_preorder_traversal.rs  bit_op.rs  fibonacci_list.rs  greed.rs  hash_map.rs  lib.rs  link_list_iterator.rs  repeat_of_array.rs  tree_iterator.rs  two_sum.rs
async-web-server/: Cargo.toml
async-web-server/src/: main.rs
crypto/: Cargo.toml  加解密算法.md
crypto/consensus_algorithm/: Cargo.toml
crypto/consensus_algorithm/src/: lib.rs  pos.rs  pow.rs  raft.rs
crypto/crypto_small_math/: Cargo.toml
crypto/crypto_small_math/src/: basic_bit_compute.rs  lib.rs  prime_group.rs
crypto/crypto_util/: Cargo.toml
crypto/crypto_util/src/: base_compute.rs  lib.rs  mod_operate.rs  point.rs  prime.rs
crypto/data_structure/: Cargo.toml
crypto/data_structure/src/: lib.rs  merkle_patricia_trie.rs  merkle_trie.rs
crypto/des/: Cargo.toml
crypto/des/src/: des_bit_impl.rs  des_char_impl.rs  lib.rs  permutation_list.rs
crypto/ecc_simple_demo/: Cargo.toml
crypto/ecc_simple_demo/src/: bls.rs  ecc.rs  ecdsa.rs  eddsa.rs  hd_wallet_derive.rs  lib.rs  point.rs
crypto/enc_dec/: Cargo.toml
crypto/enc_dec/src/: base58.rs  bech32.rs  der.rs  endian_big_little.rs  lib.rs  rlp.rs  ssz.rs
crypto/jwt_demo/: Cargo.toml
crypto/jwt_demo/src/: lib.rs
crypto/mpc/: Cargo.toml
crypto/mpc/src/: shamir_secret_sharing.rs
crypto/res/: Diffie_Hellman_key_exchange.txt  elliptic_curve_diffie_hellman.txt
crypto/rsa_simple_demo/: Cargo.toml
crypto/rsa_simple_demo/src/: lib.rs  paillier_crypto_sys.rs  rsa.rs
crypto/src/: des.rs  ecdsa.rs  lib.rs
crypto/utxo_wallet/: Cargo.toml
crypto/utxo_wallet/src/: lib.rs  transaction.rs  wallet.rs
crypto/zero_knowledge/: Cargo.toml
crypto/zero_knowledge/src/: lib.rs  sigma_zk_proto_demo.rs
dapp/: package.json
dapp/res/: inc.sol
dapp/src/: call-contract-ethers.ts  call-contract-web3.ts  deploy-contract-web3.ts  web3.ts
dapp/src/snarkjs/: circuit.circom  circuit_final.zkey  input.json  proof.json  public_invalid.json  verification_key.json  verifier.sol  witness.wtns
games/: Cargo.toml
games/src/: main.rs
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
list/: Cargo.toml
list/src/: base_list.rs  double_direct_list.rs  lib.rs  optimal_list.rs  shard_owner_list.rs  unsafe_list.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
redis-simple/: Cargo.toml
redis-simple/examples/: await-lock.rs  hello-redis.rs  io-rw.rs  mini-tokio.rs  my-select.rs
redis-simple/src/: command.rs  frame.rs  lib.rs  main.rs
socket-relay/: Cargo.toml  Dockerfile  README.md  package.json  run.sh  tsconfig.json
socket-relay/src/: enclave_agnostic.rs  lib.rs  main.rs  relay_task.rs  request.ts  server.ts
source-code-reth/: BlockchainTree的相关操作.md  lookup_head.txt  p2p初始化.md  start-node-command.txt  tx-pool相关.md  共识层相关.md  调试环境准备.md  项目使用的channel记录.md
source-code-reth/images/: debug配置截图
src/: common_collection.rs  error_handle.rs  generic_traits_lifetime.rs  iterator_closure.rs  main.rs  struct_related.rs
src/basic_concept/: basic_concept.rs
src/enum_pattern_match/: enum_pattern_match.rs
src/error_handle/: panic_unrecoverable.rs  result_recorverable.rs
src/generic_traits_lifetime/: generic_type_study.rs  mix_usage.rs  test_study.rs
src/ownership/: ownership.rs
src/package_crate_module/: package_crate_module.rs
src/struct_related/: mod.rs  retangle.rs  struct_related.rs
study-example/: Cargo.toml
study-example/src/: advance_feature.rs  common_collection.rs  concurrency.rs  error_handle.rs  iterator_closure.rs  lib.rs  main.rs  object_oriented.rs  pattern_match.rs  smart_pointer.rs  struct_related.rs
study-example/src/advance_feature/: advanced_function_closures.rs  advanced_trait.rs  advanced_type.rs  macros.rs  unsafe_rust.rs
study-example/src/basic_concept/: basic_concept.rs  mod.rs
study-example/src/common_collection/: hash_map_study.rs  string_study.rs  vector_study.rs
study-example/src/concurrency/: dead_lock.rs  message_thread.rs  mutex_shared_state.rs  thread_create.rs
study-example/src/enum_pattern_match/: enum_pattern_match.rs  mod.rs
study-example/src/error_handle/: panic_unrecoverable.rs
study-example/src/generic_traits_lifetime/: lifetime_study.rs  test_study.rs  traits_study.rs
study-example/src/iterator_closure/: closure_study.rs  iterator_process_study.rs
study-example/src/object_oriented/: object_oriented_desgin_pattern.rs  object_oriented_feature.rs  trait_object_for_diff_type.rs
study-example/src/ownership/: ownership.rs
study-example/src/package_crate_module/: mod.rs
study-example/src/pattern_match/: pattern_syntax.rs  pattern_usage_places.rs
study-example/src/smart_pointer/: box_pointer.rs  deref_trait.rs  drop_trait.rs  rc_t_count_pointer.rs  refcell_pointer.rs  reference_cycle.rs
study-example/src/struct_related/: define_init_struct.rs  retangle.rs
study-practice/: Cargo.toml
study-practice/src/: advance_rust.rs  array_practice.rs  async_await.rs  borrow_reference.rs  collection.rs  concurrency.rs  enum_practice.rs  error_result.rs  generic.rs  lib.rs  lifetime.rs  loop_practice.rs  main.rs  match_all_practice.rs  match_practice.rs  method.rs  string_practice.rs  struct_practice.rs  traits.rs  tuple.rs  var_ownership.rs
study-practice/src/advance_rust/: clousure.rs  iterator.rs  (+5 more)
tool/: Cargo.toml  check-bep20-token.sh
tool/.cargo/: config.toml
tool/src/: bip32.rs  btc.rs  cli.rs  encrypt_decrypt.rs  eth.rs  file_handle.rs  http_request.rs  lib.rs  main.rs  util.rs
vsock-node/: Cargo.toml  Dockerfile  README.md  package.json  run.sh
vsock-node/src/: command_parser.rs  create_app.rs  enclave.ts  http_send_recv.rs  lib.rs  main.rs  proto_helpers.rs  proto_socket.rs  sender_receiver.rs  thread_pool.rs
web-server/: Cargo.toml
web-server/src/: lib.rs  main.rs
(+17 files in other folders)
