[workspace]
members = [
    "study-example",
    "minigrep",
    "hello_macro_derive",
    "web-server",
    "study-practice",
    "crypto",
    "./crypto/crypto_small_math",
    "./crypto/des",
    "vsock-node",
    "async-web-server",
    "redis-simple",
    "list",
    "algorithms",
    "./algorithms/algorithms-utils",
    "socket-relay"
]

[workspace.package]
name = "study-rust-example"
version = "0.2.2"
edition = "2021"
description = "a study example"
license = "MIT"
repository = "https://github.com/Trackerming/study-rust-example.git"
