[workspace]
members = [
    "study-example",
    "minigrep",
    "hello_macro_derive",
    "web-server",
    "study-practice",
    "crypto",
    "./crypto/crypto_util",
    "./crypto/crypto_small_math",
    "./crypto/consensus_algorithm",
    "./crypto/data_structure",
    "./crypto/ecc_simple_demo",
    "./crypto/enc_dec",
    "./crypto/jwt_demo",
    "./crypto/mpc",
    "./crypto/rsa_simple_demo",
    "./crypto/utxo_wallet",
    "./crypto/zero_knowledge",
    "./crypto/des",
    "vsock-node",
    "async-web-server",
    "tool",
    "redis-simple",
    "list",
    "algorithms",
    "./algorithms/algorithms-utils",
    "socket-relay",
    "games"
]
resolver = "2"

[workspace.package]
name = "study-rust-example"
version = "0.2.2"
edition = "2021"
description = "a study example"
license = "MIT"
repository = "https://github.com/Trackerming/study-rust-example.git"
