[package]
name = "redis-simple"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

# 显示指定和默认main效果类似
[[bin]]
name = "redis-simple"
path = "src/main.rs"
