[package]
name = "redis-simple"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1.5.0"
futures = "0.3"
crossbeam = "0.8"
serde = { version = "1.0.189", features = ["derive"] }

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"
[[example]]
name = "await-lock"
path = "examples/await-lock.rs"
[[example]]
name = "io-rw"
path = "examples/io-rw.rs"
[[example]]
name = "mini-tokio"
path = "examples/mini-tokio.rs"
[[example]]
name = "my-select"
path = "examples/my-select.rs"

# 显示指定和默认main效果类似
[[bin]]
name = "redis-simple-server"
path = "src/bin/server.rs"
[[bin]]
name = "redis-simple-client"
path = "src/bin/client.rs"
