[package]
name = "tool"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tool_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }
rand = { version = "0.8.5", features = [] }
bs58 = "0.5.0"
bytes = "1"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.111"
bip32 = "0.5.1"
ethers = "2.0.14"
bip39 = "2.0.0"
serde = { version = "1.0.196", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.3"
num-traits = "0.2.18"
num-bigint = "0.4.4"
sha3 = "0.10.8"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
bitcoin_hashes = "0.14.0"

