[package]
name = "vsock-node"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
log = "0.4"
nix = "0.20"
byteorder = "1.3"
libc = "0.2.149"
