[package]
name = "ecc_simple_demo"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crypto_util = {path = "../crypto_util"}
enc_dec = {path = "../enc_dec"}
hmac = "0.12.1"
sha2 = "0.10.8"
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }
serde = { version = "1.0.197", features = ["derive"] }
